@@ -2,15 +2,14 @@ Package: aoos
 Type: Package
 Title: Another Object Orientation System
 Version: 0.0.5
-Date: 2014-11-16
+Date: 2014-11-24
 Author: Sebastian Warnholz
 Maintainer: Sebastian Warnholz <wahani@gmail.com>
 URL: https://wahani.github.com/aoos
 BugReports: https://github.com/wahani/aoos/issues
-Description: Another implementation of object-orientation in R. Private and
-    public methods are part of the class-definition. Has reference semantics
-    and is build around S4. Hopefully improves readability of your code has
-    auto-complete in RStudio for public member functions.
+Description: Another implementation of object-orientation in R. Has reference
+    semantics and is build around S4. Hopefully improves readability of your
+    code has auto-complete in RStudio for public methods.
 Depends:
     methods,
     R(>= 3.0)
