@@ -2,6 +2,7 @@ Version 0.0.5
 
 - Use the method public instead of publicFunction and publicValue
 - Renaming of class oom to aoos
+- Vignette: Introduction
 
 Version 0.0.4
 
